--- a/Client/package.json
+++ b/Client/package.json
@@ -4,33 +4,36 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --port 3200",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@heroicons/react": "^2.1.1",
+    "@monaco-editor/react": "^4.6.0",
+    "@react-three/drei": "^9.102.3",
+    "@react-three/fiber": "^8.15.19",
+    "@reduxjs/toolkit": "^2.2.1",
+    "autoprefixer": "^10.4.18",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.8",
+    "gsap": "^3.12.7",
+    "jwt-decode": "^4.0.0",
+    "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.358.0",
+    "postcss": "^8.4.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "framer-motion": "^11.0.8",
-    "@heroicons/react": "^2.1.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-icons": "^5.0.1",
-    "@monaco-editor/react": "^4.6.0",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "three": "^0.162.0",
-    "@react-three/fiber": "^8.15.19",
-    "@react-three/drei": "^9.102.3",
-    "gsap": "^3.12.5",
-    "lucide-react": "^0.358.0",
-    "@reduxjs/toolkit": "^2.2.1",
-    "react-redux": "^9.1.0",
-    "axios": "^1.6.7",
     "react-hot-toast": "^2.4.1",
-    "jwt-decode": "^4.0.0"
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "styled-components": "^6.1.15",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
