--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,8 @@
   "description": "Project Title: LegoUI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev":"node --watch server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
